# gdvariants

./: .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  info.json  source.json
.github/workflows/: main.yml
examples/hello_world/: .gitignore  Cargo.toml  Justfile  README.md
examples/hello_world/godot/: hashmap.tscn  hashset.tscn  project.godot  rust.gdnlib  vec.tscn
src/: lib.rs
src/collections/: hash_map.rs  hash_map_impl_clone.rs  hash_map_impl_debug.rs  hash_map_impl_default.rs  hash_map_impl_extend.rs  hash_map_impl_from_iterator.rs  hash_map_impl_index.rs  hash_map_impl_into_iterator.rs  hash_map_impl_partial_eq.rs  hash_set.rs  mod.rs
src/collections/hash_map_impl/: hash_map_impl.rs  hash_map_impl_clone.rs  hash_map_impl_debug.rs  hash_map_impl_default.rs  hash_map_impl_eq.rs  hash_map_impl_extend.rs  hash_map_impl_from.rs  hash_map_impl_from_iterator.rs  hash_map_impl_index.rs  hash_map_impl_into_iterator.rs  hash_map_impl_partial_eq.rs  mod.rs
src/collections/hash_set_impl/: hash_set_impl.rs  hash_set_impl_bit_and.rs  hash_set_impl_bit_or.rs  hash_set_impl_bit_xor.rs  hash_set_impl_clone.rs  hash_set_impl_debug.rs  hash_set_impl_default.rs  hash_set_impl_eq.rs  hash_set_impl_from.rs  (+6 more)
src/vec/: mod.rs  vec.rs  vec_impl_as_ref.rs  vec_impl_borrow.rs  vec_impl_borrow_mut.rs  vec_impl_clone.rs  vec_impl_default.rs  vec_impl_from.rs  vec_impl_from_iterator.rs  vec_impl_index_mut.rs  vec_impl_ord.rs  vec_impl_partial_eq.rs  vec_impl_partial_ord.rs  vec_impl_slice_index.rs  vec_impl_try_from.rs
tests/check/: Cargo.toml  README.md
(+40 files in other folders)
