[package]
name = "gdvariants"
version = "1.0.0"
authors = ["Hrafn Orri Hrafnkelsson"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ironpeak/gdvariants"
description = """
Rust std library collections wrapper that implements the godot-rust variant traits.
"""
keywords = ["gamedev", "godot"]
categories = ["game-development"]
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "COPYRIGHT"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
gdnative = "0.10.0"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
